--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed nav" data-bs-theme="white"
-        style="width: 100%; z-index: 1;">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary nav">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="./imagens/Logo.png" class="logo">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-                aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarScroll">
-                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link games" href="#">Games</a>
                     </li>
@@ -59,7 +58,7 @@
     </section>
 
     <div class="ultimoCard">
-        <div class="card mb-3 fundoCard" style="max-width: 740px;">
+        <div class="card mb-3 fundoCard" style="max-width: 670px;">
             <div class="row g-0">
                 <div class="col-md-4">
                     <img src="./imagens/1Post.jpg" class="img-fluid rounded-start imgPost" alt="...">
@@ -81,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="card mb-3 fundoCard" style="max-width: 740px;">
+        <div class="card mb-3 fundoCard" style="max-width: 670px;">
             <div class="row g-0">
                 <div class="col-md-4">
                     <img src="./imagens/1Post.jpg" class="img-fluid rounded-start imgPost" alt="...">
@@ -155,7 +154,7 @@
     </section>
 
     <div class="ultimoCard">
-        <div class="card mb-3 fundoCard" style="max-width: 740px;">
+        <div class="card mb-3 fundoCard" style="max-width: 670px;">
             <div class="row g-0">
                 <div class="col-md-4">
                     <img src="./imagens/1Post.jpg" class="img-fluid rounded-start imgPost" alt="...">
@@ -177,7 +176,7 @@
                 </div>
             </div>
         </div>
-        <div class="card mb-3 fundoCard" style="max-width: 740px;">
+        <div class="card mb-3 fundoCard" style="max-width: 670px;">
             <div class="row g-0">
                 <div class="col-md-4">
                     <img src="./imagens/1Post.jpg" class="img-fluid rounded-start imgPost" alt="...">
