--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -23,90 +24,77 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link games" href="#">Games</a>
+                        <a class="nav-link games" href="#games">Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link novidades" href="#">Novidades</a>
+                        <a class="nav-link novidades" href="#novidades">Novidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link novidades" href="#">Tecnologias</a>
+                        <a class="nav-link novidades" href="#tecnologias">Tecnologias</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="divTexto">
-        <div class="card mb-3 col-8 texto">
-            <div class="card-body">
-                <h4 class="card-title">Bem Vindo ao Blog do Mateus!</h4>
-                <h5 class="card-text">Aqui você encontra informações sobre as novidades do mundo
-                    moderno como<span class="verde"> Games</span>, <span class="verde">Tecnologias</span> e <span
-                        class="verde">Novidades</span> da atualidade!</h5>
-                <h5>Vou te manter sempre informado da maneira mais rápida e intuitiva possível!</h5>
-                <p class="card-text"><small class="text-body-secondary"><span class="branco">Mateus Brusius
-                            Otto</span></small></p>
-            </div>
+    <section class="home" id="home">
+        <div class="home-text container">
+            <h2 class="home-title">Bem Vindo ao Blog TechVibes!</h2>
+            <span class="home-subtitle">Aqui você encontra informações sobre as novidades do mundo
+                moderno como Games, Tecnologias e Novidades da atualidade! Vou te manter sempre informado da maneira
+                mais rápida
+                e intuitiva possível!</span>
         </div>
-    </div>
+    </section>
 
-    <section>
-        <div class="divLinhaVerde">
-            <h2 class="linhaVerde">GAMES<div class="linha"></div>
+    <section id="games">
+        <div class="divLinhaCinza">
+            <h2 class="linhaCinza">GAMES<div class="linha"></div>
             </h2>
         </div>
     </section>
 
-    <div class="ultimoCard">
-        <div class="card mb-3 fundoCard" style="max-width: 670px;">
+    <div class="Card">
+        <div class="card mb-3 fundoCardGrande" style="max-width: 1000px;">
             <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="./imagens/1Post.jpg" class="img-fluid rounded-start imgPost" alt="...">
-                </div>
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title">Google Notícias completa 20 anos com redesign e fundo de apoio ao
+                        <h3 class="card-title">Google Notícias completa 20 anos com redesign e fundo de apoio ao
                             jornalismo
-                            independente</h5>
-                        <p class="card-text">Na última semana, o Google apresentou uma nova versão para desktop do seu
+                            independente</h3>
+                        <h5 class="card-text text">Na última semana, o Google apresentou uma nova versão para desktop do
+                            seu
                             serviço de notícias. Após um redesign profundo, o Google Notícias promete informar mais
                             sobre os
                             temas que os usuários acompanham, com mais profundidade e facilidade de acesso – seja lendo
                             no
-                            smartphone ou, agora, no computador.</p>
+                            smartphone ou, agora, no computador.</h5>
                         <p class="card-text"><small class="text-body-secondary">Fernando
                                 Silva</small></p>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="card mb-3 fundoCard" style="max-width: 670px;">
-            <div class="row g-0">
                 <div class="col-md-4">
                     <img src="./imagens/1Post.jpg" class="img-fluid rounded-start imgPost" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Google Notícias completa 20 anos com redesign e fundo de apoio ao
-                            jornalismo
-                            independente</h5>
-                        <p class="card-text">Na última semana, o Google apresentou uma nova versão para desktop do seu
-                            serviço de notícias. Após um redesign profundo, o Google Notícias promete informar mais
-                            sobre os
-                            temas que os usuários acompanham, com mais profundidade e facilidade de acesso – seja lendo
-                            no
-                            smartphone ou, agora, no computador.</p>
-                        <p class="card-text"><small class="text-body-secondary">Fernando
-                                Silva</small></p>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <section>
-        <div class="divLinhaVerde">
-            <h2 class="linhaVerde">NOVIDADES<div class="linha"></div>
+    <div class="cardsQuadrados">
+        <div class="imagensQuadradas">
+            <img src="./imagens/5Post.png" class="img-fluid " alt="...">
+        </div>
+        <div class="imagensQuadradas">
+            <img src="./imagens/6Post.png" class="img-fluid " alt="...">
+        </div>
+        <div class="imagensQuadradas">
+            <img src="./imagens/7Post.png" class="img-fluid " alt="...">
+        </div>
+    </div>
+
+    <section id="novidades">
+        <div class="divLinhaCinza">
+            <h2 class="linhaCinza">NOVIDADES<div class="linha"></div>
             </h2>
         </div>
     </section>
@@ -144,67 +132,52 @@
                             Oliveira</span></small></p>
             </div>
         </div>
+        <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
+            <img src="./imagens/2Post.jpg" class="card-img-top imgPostsMenor" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Vendas do Macbook Pro com chip M2 começam nesta sexta-feira (24)</h5>
+                <p class="card-text">Durante a WWDC deste ano, a Apple anunciou diversas novidades em seus sistemas
+                    e produtos, incluindo um Macbook Air redesenhado e com a segunda geração de chips da empresa, o
+                    M2.</p>
+                <p class="card-text"><small class="text-body-secondary"><span class="branco">Paula
+                            Ramos</span></small></p>
+            </div>
+        </div>
     </div>
 
-    <section>
-        <div class="divLinhaVerde">
-            <h2 class="linhaVerde">TECNOLOGIAS<div class="linha"></div>
+    <section id="tecnologias">
+        <div class="divLinhaCinza">
+            <h2 class="linhaCinza">TECNOLOGIAS<div class="linha"></div>
             </h2>
         </div>
     </section>
 
-    <div class="ultimoCard">
-        <div class="card mb-3 fundoCard" style="max-width: 670px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="./imagens/1Post.jpg" class="img-fluid rounded-start imgPost" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Google Notícias completa 20 anos com redesign e fundo de apoio ao
-                            jornalismo
-                            independente</h5>
-                        <p class="card-text">Na última semana, o Google apresentou uma nova versão para desktop do seu
-                            serviço de notícias. Após um redesign profundo, o Google Notícias promete informar mais
-                            sobre os
-                            temas que os usuários acompanham, com mais profundidade e facilidade de acesso – seja lendo
-                            no
-                            smartphone ou, agora, no computador.</p>
-                        <p class="card-text"><small class="text-body-secondary">Fernando
-                                Silva</small></p>
-                    </div>
-                </div>
-            </div>
+    <div class="cardsQuadrados">
+        <div class="imagensQuadradas">
+            <img src="./imagens/7Post.png" class="img-fluid " alt="...">
         </div>
-        <div class="card mb-3 fundoCard" style="max-width: 670px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="./imagens/1Post.jpg" class="img-fluid rounded-start imgPost" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Google Notícias completa 20 anos com redesign e fundo de apoio ao
-                            jornalismo
-                            independente</h5>
-                        <p class="card-text">Na última semana, o Google apresentou uma nova versão para desktop do seu
-                            serviço de notícias. Após um redesign profundo, o Google Notícias promete informar mais
-                            sobre os
-                            temas que os usuários acompanham, com mais profundidade e facilidade de acesso – seja lendo
-                            no
-                            smartphone ou, agora, no computador.</p>
-                        <p class="card-text"><small class="text-body-secondary">Fernando
-                                Silva</small></p>
-                    </div>
-                </div>
-            </div>
+        <div class="imagensQuadradas">
+            <img src="./imagens/5Post.png" class="img-fluid " alt="...">
+        </div>
+        <div class="imagensQuadradas">
+            <img src="./imagens/6Post.png" class="img-fluid " alt="...">
+        </div>
+        <div class="imagensQuadradas">
+            <img src="./imagens/7Post.png" class="img-fluid " alt="...">
         </div>
     </div>
 
-    <footer>
-        <div class="footer">
-            <img src="./imagens/Logo.png" class="logoFooter">
+    <section class="footer">
+        <div class="follow">
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-linkedin"></a>
         </div>
-    </footer>
+        <div class="logoFooter">
+            <h2>TechVibes</h2>
+        </div>
+    </section>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
