--- a/index.html
+++ b/index.html
@@ -59,22 +59,13 @@
             <div class="row g-0">
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h3 class="card-title">Google Notícias completa 20 anos com redesign e fundo de apoio ao
-                            jornalismo
-                            independente</h3>
-                        <h5 class="card-text text">Na última semana, o Google apresentou uma nova versão para desktop do
-                            seu
-                            serviço de notícias. Após um redesign profundo, o Google Notícias promete informar mais
-                            sobre os
-                            temas que os usuários acompanham, com mais profundidade e facilidade de acesso – seja lendo
-                            no
-                            smartphone ou, agora, no computador.</h5>
-                        <p class="card-text"><small class="text-body-secondary">Fernando
-                                Silva</small></p>
+                        <h3 class="card-title titulo-post1"></h3>
+                        <h5 class="card-text text descricao-post1"></h5>
+                        <p class="card-text"><small class="text-body-secondary nome-criador1"></small></p>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="./imagens/1Post.jpg" class="img-fluid rounded-start imgPost" alt="...">
+                    <img src="#" class="img-fluid rounded-start imgPost img-post1" alt="...">
                 </div>
             </div>
         </div>
@@ -101,46 +92,35 @@
 
     <div class="cardsMenor">
         <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
-            <img src="./imagens/2Post.jpg" class="card-img-top imgPostsMenor" alt="...">
+            <img src="#" class="card-img-top imgPostsMenor img-post2" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Vendas do Macbook Pro com chip M2 começam nesta sexta-feira (24)</h5>
-                <p class="card-text">Durante a WWDC deste ano, a Apple anunciou diversas novidades em seus sistemas
-                    e produtos, incluindo um Macbook Air redesenhado e com a segunda geração de chips da empresa, o
-                    M2.</p>
-                <p class="card-text"><small class="text-body-secondary"><span class="branco">Paula
-                            Ramos</span></small></p>
+                <h5 class="card-title titulo-post2"></h5>
+                <p class="card-text descricao-post2"></p>
+                <p class="card-text"><small class="text-body-secondary nome-criador2"><span class="branco"></span></small></p>
             </div>
         </div>
         <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
-            <img src="./imagens/3Post.jpg" class="card-img-top imgPostsMenor" alt="...">
+            <img src="#" class="card-img-top imgPostsMenor img-post3" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Citroen Ami Buggy: O carro mais simpático que você já viu até hoje</h5>
-                <p class="card-text">17 minutos para esgotar e apenas 2 minutos e 53 segundos para vender a primeira
-                    unidade. Estes são os números (incríveis) das vendas das 50 unidades especiais e ultra limitadas
-                    do My Ami Buggy, da Citroen.</p>
-                <p class="card-text"><small class="text-body-secondary"><span class="branco">Rodrigo
-                            Silveira</span></small></p>
+                <h5 class="card-title titulo-post3"></h5>
+                <p class="card-text descricao-post3"></p>
+                <p class="card-text"><small class="text-body-secondary nome-criador3"><span class="branco"></span></small></p>
             </div>
         </div>
         <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
-            <img src="./imagens/4Post.jpg" class="card-img-top imgPostsMenor" alt="...">
+            <img src="#" class="card-img-top imgPostsMenor img-post4" alt="...">
             <div class="card-body">
-                <h5 class="card-title">SEGA anuncia Hyenas, novo FPS no espaço pós-apocalíptico</h5>
-                <p class="card-text">O mundo dos jogos competitivos nunca foi tão diverso, e o anúncio feito pela
-                    SEGA nesta quarta-feira (22) promete contribuir com outro título promissor.</p>
-                <p class="card-text"><small class="text-body-secondary"><span class="branco">Lucas
-                            Oliveira</span></small></p>
+                <h5 class="card-title titulo-post4"></h5>
+                <p class="card-text descricao-post4"></p>
+                <p class="card-text"><small class="text-body-secondary nome-criador4"><span class="branco"></span></small></p>
             </div>
         </div>
         <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
-            <img src="./imagens/2Post.jpg" class="card-img-top imgPostsMenor" alt="...">
+            <img src="#" class="card-img-top imgPostsMenor img-post5" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Vendas do Macbook Pro com chip M2 começam nesta sexta-feira (24)</h5>
-                <p class="card-text">Durante a WWDC deste ano, a Apple anunciou diversas novidades em seus sistemas
-                    e produtos, incluindo um Macbook Air redesenhado e com a segunda geração de chips da empresa, o
-                    M2.</p>
-                <p class="card-text"><small class="text-body-secondary"><span class="branco">Paula
-                            Ramos</span></small></p>
+                <h5 class="card-title titulo-post5"></h5>
+                <p class="card-text descricao-post5"></p>
+                <p class="card-text"><small class="text-body-secondary nome-criador5"><span class="branco"></span></small></p>
             </div>
         </div>
     </div>
@@ -179,6 +159,7 @@
         </div>
     </section>
 </body>
+<script src="index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
