--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
     </div>
 
     <div class="cardsQuadrados">
-        <div class="imagensQuadradas">
+        <div class="div-imagensQuadradas">
             <img src="./imagens/5Post.png" class="img-fluid " alt="...">
         </div>
-        <div class="imagensQuadradas">
+        <div class="div-imagensQuadradas">
             <img src="./imagens/6Post.png" class="img-fluid " alt="...">
         </div>
-        <div class="imagensQuadradas">
+        <div class="div-imagensQuadradas">
             <img src="./imagens/7Post.png" class="img-fluid " alt="...">
         </div>
     </div>
@@ -133,17 +133,17 @@
     </section>
 
     <div class="cardsQuadrados">
-        <div class="imagensQuadradas">
-            <img src="./imagens/7Post.png" class="img-fluid " alt="...">
+        <div class="div-imagensQuadradas">
+            <img src="./imagens/post6.webp" class="img-fluid imagensQuadradas" alt="...">
         </div>
-        <div class="imagensQuadradas">
-            <img src="./imagens/5Post.png" class="img-fluid " alt="...">
+        <div class="div-imagensQuadradas">
+            <img src="./imagens/post7.jpg" class="img-fluid imagensQuadradas" alt="...">
         </div>
-        <div class="imagensQuadradas">
-            <img src="./imagens/6Post.png" class="img-fluid " alt="...">
+        <div class="div-imagensQuadradas">
+            <img src="./imagens/post8.webp" class="img-fluid imagensQuadradas" alt="...">
         </div>
-        <div class="imagensQuadradas">
-            <img src="./imagens/7Post.png" class="img-fluid " alt="...">
+        <div class="div-imagensQuadradas">
+            <img src="./imagens/7Post.png" class="img-fluid imagensQuadradas" alt="...">
         </div>
     </div>
 
