Modificações no design

--- a/index.html
+++ b/index.html
@@ -55,20 +55,14 @@
     </section>
 
     <div class="Card">
-        <div class="card mb-3 fundoCardGrande" style="max-width: 1000px;">
-            <div class="row g-0">
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h3 class="card-title titulo-post1"></h3>
-                        <h5 class="card-text text descricao-post1"></h5>
-                        <p class="card-text"><small class="text-body-secondary nome-criador1"></small></p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <img src="#" class="img-fluid rounded-start imgPost img-post1" alt="...">
-                </div>
-            </div>
+    <div class="card mb-3 fundoCardGrande">
+        <img src="#" class="card-img-top imgPost img-post1" alt="...">
+        <div class="card-body">
+          <h3 class="card-title titulo-post1"></h3>
+          <h5 class="card-text text descricao-post1"></h5>
+          <p class="card-text"><small class="text-body-secondary nome-criador1"></small></p>
         </div>
+      </div>
     </div>
 
     <div class="cardsQuadrados">
@@ -134,16 +128,16 @@
 
     <div class="cardsQuadrados">
         <div class="div-imagensQuadradas">
-            <img src="./imagens/post6.webp" class="img-fluid imagensQuadradas" alt="...">
+            <img src="./imagens/8Post.webp" class="img-fluid imagensQuadradas" alt="...">
         </div>
         <div class="div-imagensQuadradas">
-            <img src="./imagens/post7.jpg" class="img-fluid imagensQuadradas" alt="...">
+            <img src="./imagens/9Post.png" class="img-fluid imagensQuadradas" alt="...">
         </div>
         <div class="div-imagensQuadradas">
-            <img src="./imagens/post8.webp" class="img-fluid imagensQuadradas" alt="...">
+            <img src="./imagens/10Post.png" class="img-fluid imagensQuadradas" alt="...">
         </div>
         <div class="div-imagensQuadradas">
-            <img src="./imagens/7Post.png" class="img-fluid imagensQuadradas" alt="...">
+            <img src="./imagens/11Post.png" class="img-fluid imagensQuadradas" alt="...">
         </div>
     </div>
 
@@ -155,7 +149,7 @@
             <a href="#" class="fab fa-linkedin"></a>
         </div>
         <div class="logoFooter">
-            <h2>TechVibes</h2>
+            <h3>TechVibes</h3>
         </div>
     </section>
 </body>
