--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     </section>
 
     <div class="Card">
-    <div class="card mb-3 fundoCardGrande">
-        <img src="#" class="card-img-top imgPost img-post1" alt="...">
-        <div class="card-body">
-          <h3 class="card-title titulo-post1"></h3>
-          <h5 class="card-text text descricao-post1"></h5>
-          <p class="card-text"><small class="text-body-secondary nome-criador1"></small></p>
+        <div class="card mb-3 fundoCardGrande">
+            <img src="#" class="card-img-top imgPost img-post1" alt="...">
+            <div class="card-body">
+                <h3 class="card-title titulo-post1"></h3>
+                <h5 class="card-text text descricao-post1"></h5>
+                <p class="card-text"><small class="text-body-secondary nome-criador1"></small></p>
+            </div>
         </div>
-      </div>
     </div>
 
     <div class="cardsQuadrados">
@@ -90,7 +90,11 @@
             <div class="card-body">
                 <h5 class="card-title titulo-post2"></h5>
                 <p class="card-text descricao-post2"></p>
-                <p class="card-text"><small class="text-body-secondary nome-criador2"><span class="branco"></span></small></p>
+                <p class="card-text"><small class="text-body-secondary nome-criador2"><span
+                            class="branco"></span></small></p>
+            </div>
+            <div class="btnMais">
+                <button class="button-28 btn1" role="button">Ver mais</button>
             </div>
         </div>
         <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
@@ -98,7 +102,11 @@
             <div class="card-body">
                 <h5 class="card-title titulo-post3"></h5>
                 <p class="card-text descricao-post3"></p>
-                <p class="card-text"><small class="text-body-secondary nome-criador3"><span class="branco"></span></small></p>
+                <p class="card-text"><small class="text-body-secondary nome-criador3"><span
+                            class="branco"></span></small></p>
+            </div>
+            <div class="btnMais">
+                <button class="button-28 btn2" role="button">Ver mais</button>
             </div>
         </div>
         <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
@@ -106,7 +114,11 @@
             <div class="card-body">
                 <h5 class="card-title titulo-post4"></h5>
                 <p class="card-text descricao-post4"></p>
-                <p class="card-text"><small class="text-body-secondary nome-criador4"><span class="branco"></span></small></p>
+                <p class="card-text"><small class="text-body-secondary nome-criador4"><span
+                            class="branco"></span></small></p>
+            </div>
+            <div class="btnMais">
+                <button class="button-28 btn3" role="button">Ver mais</button>
             </div>
         </div>
         <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
@@ -114,7 +126,11 @@
             <div class="card-body">
                 <h5 class="card-title titulo-post5"></h5>
                 <p class="card-text descricao-post5"></p>
-                <p class="card-text"><small class="text-body-secondary nome-criador5"><span class="branco"></span></small></p>
+                <p class="card-text"><small class="text-body-secondary nome-criador5"><span
+                            class="branco"></span></small></p>
+            </div>
+            <div class="btnMais">
+                <button class="button-28 btn4" role="button">Ver mais</button>
             </div>
         </div>
     </div>
@@ -153,6 +169,7 @@
         </div>
     </section>
 </body>
+<script src="postagem.js"></script>
 <script src="index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
