Implementação de botão ver mais

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </h2>
         </div>
     </section>
-
+    <div class="container-mais"></div>
     <div class="cardsMenor">
         <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
             <img src="#" class="card-img-top imgPostsMenor img-post2" alt="...">
