Implementação de novos botões que levam à informações sobre o post

--- a/index.html
+++ b/index.html
@@ -37,126 +37,145 @@
         </div>
     </nav>
 
-    <section class="home" id="home">
-        <div class="home-text container">
-            <h2 class="home-title">Bem Vindo ao Blog TechVibes!</h2>
-            <span class="home-subtitle">Aqui você encontra informações sobre as novidades do mundo
-                moderno como Games, Tecnologias e Novidades da atualidade! Vou te manter sempre informado da maneira
-                mais rápida
-                e intuitiva possível!</span>
-        </div>
-    </section>
-
-    <section id="games">
-        <div class="divLinhaCinza">
-            <h2 class="linhaCinza">GAMES<div class="linha"></div>
-            </h2>
-        </div>
-    </section>
-
-    <div class="Card">
-        <div class="card mb-3 fundoCardGrande">
-            <img src="#" class="card-img-top imgPost img-post1" alt="...">
-            <div class="card-body">
-                <h3 class="card-title titulo-post1"></h3>
-                <h5 class="card-text text descricao-post1"></h5>
-                <p class="card-text"><small class="text-body-secondary nome-criador1"></small></p>
+    <div class="container-verMais">
+        <div class="Card-verMais">
+            <div class="card mb-3 fundoCardGrande-verMais">
+                <img src="#" class="card-img-top imgPost imgPost-verMais" alt="...">
+                <div class="card-body">
+                    <h3 class="card-title titulo-post-verMais"></h3>
+                    <h5 class="card-text text descricao-post-verMais"></h5>
+                    <p class="card-text"><small class="text-body-secondary nome-criador-verMais"></small></p>   
+                </div>
+                <div class="container-btnVoltar">
+                    <button class="button-28 btnVoltar" role="button">Voltar</button>
+                </div>
             </div>
+
         </div>
     </div>
 
-    <div class="cardsQuadrados">
-        <div class="div-imagensQuadradas">
-            <img src="./imagens/5Post.png" class="img-fluid " alt="...">
+    <div class="esconde-body">
+        <section class="home" id="home">
+            <div class="home-text container">
+                <h2 class="home-title">Bem Vindo ao Blog TechVibes!</h2>
+                <span class="home-subtitle">Aqui você encontra informações sobre as novidades do mundo
+                    moderno como Games, Tecnologias e Novidades da atualidade! Vou te manter sempre informado da maneira
+                    mais rápida
+                    e intuitiva possível!</span>
+            </div>
+        </section>
+
+        <section id="games">
+            <div class="divLinhaCinza">
+                <h2 class="linhaCinza">GAMES<div class="linha"></div>
+                </h2>
+            </div>
+        </section>
+
+        <div class="Card">
+            <div class="card mb-3 fundoCardGrande">
+                <img src="#" class="card-img-top imgPost img-post1" alt="...">
+                <div class="card-body">
+                    <h3 class="card-title titulo-post1"></h3>
+                    <h5 class="card-text text descricao-post1"></h5>
+                    <p class="card-text"><small class="text-body-secondary nome-criador1"></small></p>
+                </div>
+            </div>
         </div>
-        <div class="div-imagensQuadradas">
-            <img src="./imagens/6Post.png" class="img-fluid " alt="...">
+
+        <div class="cardsQuadrados">
+            <div class="div-imagensQuadradas quadrado1">
+                <img src="./imagens/5Post.png" class="img-fluid " alt="...">
+            </div>
+            <div class="div-imagensQuadradas quadrado2">
+                <img src="./imagens/6Post.png" class="img-fluid " alt="...">
+            </div>
+            <div class="div-imagensQuadradas quadrado3">
+                <img src="./imagens/7Post.png" class="img-fluid " alt="...">
+            </div>
         </div>
-        <div class="div-imagensQuadradas">
-            <img src="./imagens/7Post.png" class="img-fluid " alt="...">
+
+        <section id="novidades">
+            <div class="divLinhaCinza">
+                <h2 class="linhaCinza">NOVIDADES<div class="linha"></div>
+                </h2>
+            </div>
+        </section>
+
+        <div class="cardsMenor">
+            <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
+                <img src="#" class="card-img-top imgPostsMenor img-post2" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title titulo-post2"></h5>
+                    <p class="card-text descricao-post2"></p>
+                    <p class="card-text"><small class="text-body-secondary nome-criador2"><span
+                                class="branco"></span></small></p>
+                </div>
+                <div class="btnMais">
+                    <button class="button-28 btn1" role="button">Ver mais</button>
+                </div>
+            </div>
+
+            <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
+                <img src="#" class="card-img-top imgPostsMenor img-post3" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title titulo-post3"></h5>
+                    <p class="card-text descricao-post3"></p>
+                    <p class="card-text"><small class="text-body-secondary nome-criador3"><span
+                                class="branco"></span></small></p>
+                </div>
+                <div class="btnMais">
+                    <button class="button-28 btn2" role="button">Ver mais</button>
+                </div>
+            </div>
+            <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
+                <img src="#" class="card-img-top imgPostsMenor img-post4" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title titulo-post4"></h5>
+                    <p class="card-text descricao-post4"></p>
+                    <p class="card-text"><small class="text-body-secondary nome-criador4"><span
+                                class="branco"></span></small></p>
+                </div>
+                <div class="btnMais">
+                    <button class="button-28 btn3" role="button">Ver mais</button>
+                </div>
+            </div>
+            <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
+                <img src="#" class="card-img-top imgPostsMenor img-post5" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title titulo-post5"></h5>
+                    <p class="card-text descricao-post5"></p>
+                    <p class="card-text"><small class="text-body-secondary nome-criador5"><span
+                                class="branco"></span></small></p>
+                </div>
+                <div class="btnMais">
+                    <button class="button-28 btn4" role="button">Ver mais</button>
+                </div>
+            </div>
+        </div>
+
+        <section id="tecnologias">
+            <div class="divLinhaCinza">
+                <h2 class="linhaCinza">TECNOLOGIAS<div class="linha"></div>
+                </h2>
+            </div>
+        </section>
+
+        <div class="cardsQuadrados">
+            <div class="div-imagensQuadradas quadrado4">
+                <img src="./imagens/8Post.webp" class="img-fluid imagensQuadradas" alt="...">
+            </div>
+            <div class="div-imagensQuadradas quadrado5">
+                <img src="./imagens/9Post.png" class="img-fluid imagensQuadradas" alt="...">
+            </div>
+            <div class="div-imagensQuadradas quadrado6">
+                <img src="./imagens/10Post.png" class="img-fluid imagensQuadradas" alt="...">
+            </div>
+            <div class="div-imagensQuadradas quadrado7">
+                <img src="./imagens/11Post.png" class="img-fluid imagensQuadradas" alt="...">
+            </div>
         </div>
     </div>
-
-    <section id="novidades">
-        <div class="divLinhaCinza">
-            <h2 class="linhaCinza">NOVIDADES<div class="linha"></div>
-            </h2>
-        </div>
-    </section>
-    <div class="container-mais"></div>
-    <div class="cardsMenor">
-        <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
-            <img src="#" class="card-img-top imgPostsMenor img-post2" alt="...">
-            <div class="card-body">
-                <h5 class="card-title titulo-post2"></h5>
-                <p class="card-text descricao-post2"></p>
-                <p class="card-text"><small class="text-body-secondary nome-criador2"><span
-                            class="branco"></span></small></p>
-            </div>
-            <div class="btnMais">
-                <button class="button-28 btn1" role="button">Ver mais</button>
-            </div>
-        </div>
-        <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
-            <img src="#" class="card-img-top imgPostsMenor img-post3" alt="...">
-            <div class="card-body">
-                <h5 class="card-title titulo-post3"></h5>
-                <p class="card-text descricao-post3"></p>
-                <p class="card-text"><small class="text-body-secondary nome-criador3"><span
-                            class="branco"></span></small></p>
-            </div>
-            <div class="btnMais">
-                <button class="button-28 btn2" role="button">Ver mais</button>
-            </div>
-        </div>
-        <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
-            <img src="#" class="card-img-top imgPostsMenor img-post4" alt="...">
-            <div class="card-body">
-                <h5 class="card-title titulo-post4"></h5>
-                <p class="card-text descricao-post4"></p>
-                <p class="card-text"><small class="text-body-secondary nome-criador4"><span
-                            class="branco"></span></small></p>
-            </div>
-            <div class="btnMais">
-                <button class="button-28 btn3" role="button">Ver mais</button>
-            </div>
-        </div>
-        <div class="card backgroundCardMenor col-md-4" style="width: 18rem;">
-            <img src="#" class="card-img-top imgPostsMenor img-post5" alt="...">
-            <div class="card-body">
-                <h5 class="card-title titulo-post5"></h5>
-                <p class="card-text descricao-post5"></p>
-                <p class="card-text"><small class="text-body-secondary nome-criador5"><span
-                            class="branco"></span></small></p>
-            </div>
-            <div class="btnMais">
-                <button class="button-28 btn4" role="button">Ver mais</button>
-            </div>
-        </div>
-    </div>
-
-    <section id="tecnologias">
-        <div class="divLinhaCinza">
-            <h2 class="linhaCinza">TECNOLOGIAS<div class="linha"></div>
-            </h2>
-        </div>
-    </section>
-
-    <div class="cardsQuadrados">
-        <div class="div-imagensQuadradas">
-            <img src="./imagens/8Post.webp" class="img-fluid imagensQuadradas" alt="...">
-        </div>
-        <div class="div-imagensQuadradas">
-            <img src="./imagens/9Post.png" class="img-fluid imagensQuadradas" alt="...">
-        </div>
-        <div class="div-imagensQuadradas">
-            <img src="./imagens/10Post.png" class="img-fluid imagensQuadradas" alt="...">
-        </div>
-        <div class="div-imagensQuadradas">
-            <img src="./imagens/11Post.png" class="img-fluid imagensQuadradas" alt="...">
-        </div>
-    </div>
-
     <section class="footer">
         <div class="follow">
             <a href="#" class="fab fa-facebook-f"></a>
@@ -168,6 +187,7 @@
             <h3>TechVibes</h3>
         </div>
     </section>
+
 </body>
 <script src="postagem.js"></script>
 <script src="index.js"></script>
